[project]
name = "velox-assignment"
version = "0.1.0"
description = "Simple local order book example for Binance API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.2",
    "sortedcontainers>=2.4.0",
    "sortedcontainers-stubs>=2.4.3",
    "websockets>=15.0.1",
]
